--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,5 +1,7 @@
 option ( LINK_PYTHON_LIBRARY "Link against python libraries" ON )
 
+include_directories(${CMAKE_CURRENT_SOURCE_DIR})
+
 add_definitions(-DHAVE_CONFIG_H)
 set(CMAKE_SWIG_FLAGS "-ignoremissing")
 
