--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -50,4 +50,8 @@ if ( SWIG_FOUND AND PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND )
 
   set ( NFC_PYTHON_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/${PYTHON_MODULE_PATH} )
 
+  
+  add_subdirectory(examples)
 endif ()
+
+
