Began nfc-anticol example.

--- a/python/examples/CMakeLists.txt
+++ b/python/examples/CMakeLists.txt
@@ -1,1 +1,5 @@
-install(FILES quick_start_example.py DESTINATION share/nfc-bindings/examples)
+
+install ( FILES nfc-anticol.py 
+                quick_start_example.py
+          DESTINATION share/nfc-bindings/examples
+        )
