--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,15 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required ( VERSION 2.8 )
+
 project(nfc-bindings C)
 
 list ( APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake )
 
+find_package ( LibNFC REQUIRED )
+include_directories ( ${LIBNFC_INCLUDE_DIRS} )
 
-find_package(LibNFC REQUIRED)
-include_directories(${LIBNFC_INCLUDE_DIRS})
-
-option ( PYTHON_BINDINGS "Build python bindings via swig" ON )
-if(PYTHON_BINDINGS)
-  add_subdirectory(python)
+option ( PYTHON_BINDINGS "Build python bindings" ON )
+if ( PYTHON_BINDINGS )
+  add_subdirectory ( python )
 endif ()
 
 
