enhanced find script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,11 @@ include_directories ( ${LIBNFC_INCLUDE_DIRS} )
 # check that nfc_iso14443b_crc symbol is available
 # bug in 1.7.0, fixed in trunk
 include(CheckCSourceRuns)
-set(CMAKE_REQUIRED_LIBRARIES ${LIBNFC_LIBRARIES})
-CHECK_C_SOURCE_RUNS(${CMAKE_CURRENT_SOURCE_DIR}/cmake/nfc_iso14443b_crc.c NFC_ISO14443B_CRC_RUN)
-message(STATUS "iso14443b_crc: ${NFC_ISO14443B_CRC_RUN}")
-if (NOT NFC_ISO14443B_CRC_RUN)
-  add_definitions(-DNFC_NO_ISO14443B_CRC)
+set ( CMAKE_REQUIRED_LIBRARIES ${LIBNFC_LIBRARIES} )
+check_c_source_runs ( ${CMAKE_CURRENT_SOURCE_DIR}/cmake/nfc_iso14443b_crc.c NFC_ISO14443B_CRC_RUN )
+if ( NOT NFC_ISO14443B_CRC_RUN )
+  message ( STATUS "iso14443b_crc not available" )
+  add_definitions ( -DNFC_NO_ISO14443B_CRC )
 endif ()
 
 option ( PYTHON_BINDINGS "Build python bindings" ON )
