enhanced find script

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,8 +13,7 @@ include(CheckCSourceRuns)
 set ( CMAKE_REQUIRED_LIBRARIES ${LIBNFC_LIBRARIES} )
 check_c_source_runs ( ${CMAKE_CURRENT_SOURCE_DIR}/cmake/nfc_iso14443b_crc.c NFC_ISO14443B_CRC_RUN )
 if ( NOT NFC_ISO14443B_CRC_RUN )
-  message ( STATUS "iso14443b_crc not available" )
-  add_definitions ( -DNFC_NO_ISO14443B_CRC )
+  add_definitions ( -DNO_ISO14443B_CRC )
 endif ()
 
 option ( PYTHON_BINDINGS "Build python bindings" ON )
