--- a/python/examples/CMakeLists.txt
+++ b/python/examples/CMakeLists.txt
@@ -1,5 +1,6 @@
 
-install ( FILES nfc-anticol.py 
+install ( FILES nfc-anticol.py
+                nfc-dep-target.py
                 quick_start_example.py
           DESTINATION share/nfc-bindings/examples
         )
