--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ find_package ( LibNFC REQUIRED )
 include_directories ( ${LIBNFC_INCLUDE_DIRS} )
 
 # check that nfc_iso14443b_crc symbol is available
-# bug in 1.7.0, fixed in trunk
+# bug in 1.7.0, fixed since
 include(CheckCSourceRuns)
 set ( CMAKE_REQUIRED_LIBRARIES ${LIBNFC_LIBRARIES} )
 check_c_source_runs ( ${CMAKE_CURRENT_SOURCE_DIR}/cmake/nfc_iso14443b_crc.c NFC_ISO14443B_CRC_RUN )
