--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,10 @@ before_install:
   - sudo apt-get install libusb-dev
   - git clone https://code.google.com/p/libnfc/ && pushd libnfc && cmake -DCMAKE_INSTALL_PREFIX=$PWD/install && make install && popd
   - sudo apt-get install swig python-dev
-compiler:
-  - gcc
-  - clang
+compiler: gcc
 
 before_script:
   - mkdir build && cd build
 
 script:
-  - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install -DLIBNFC_LIBRARY=$PWD/libnfc/install/lib/libnfc.so -DLIBNFC_INCLUDE_DIR=$PWD/libnfc/install/include/nfc .. && make install
+  - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install -DLIBNFC_LIBRARY=$PWD/libnfc/install/lib/libnfc.so -DLIBNFC_INCLUDE_DIR=$PWD/libnfc/install/include .. && make install
