--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ before_script:
   - mkdir build && pushd build
 
 script:
-  - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install -DLIBNFC_LIBRARY=$PWD/../libnfc/install/lib/libnfc.so -DLIBNFC_INCLUDE_DIR=$PWD/../libnfc/install/include
+  - cmake -DCMAKE_INSTALL_PREFIX=$PWD/install -DLIBNFC_LIBRARY=$PWD/../libnfc/install/lib/libnfc.so -DLIBNFC_INCLUDE_DIR=$PWD/../libnfc/install/include ..
   - make install
   - PYTHONPATH=$PWD/install/lib/python2.7/site-packages python ../python/examples/quick_start_example.py
