--- a/python/examples/CMakeLists.txt
+++ b/python/examples/CMakeLists.txt
@@ -1,7 +1,9 @@
 
-install ( FILES nfc-anticol.py
+if (INSTALL_EXAMPLES)
+  install (FILES nfc-anticol.py
                 nfc-dep-target.py
                 nfc-list.py
                 quick_start_example.py
           DESTINATION share/nfc-bindings/examples
         )
+endif ()
