--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -3,7 +3,7 @@ option (LINK_PYTHON_LIBRARY "Link against python libraries" ON )
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
 add_definitions (-DHAVE_CONFIG_H)
-set (CMAKE_SWIG_FLAGS "-ignoremissing")
+list (APPEND CMAKE_SWIG_FLAGS "-ignoremissing")
 
 if (BUILD_PYTHON)
   # workaround for cmake bug #0013449
