fix relative dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ before_install:
 script:
   - cmake -DCMAKE_INSTALL_PREFIX=~/.local/ -DLIBNFC_LIBRARY=~/.local/lib/libnfc.so -DLIBNFC_INCLUDE_DIR=~/.local/include .
   - make install -j2
-  - LD_LIBRARY_PATH=~/.local/lib/ python ../python/examples/quick_start_example.py
+  - LD_LIBRARY_PATH=~/.local/lib/ python python/examples/quick_start_example.py
