--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,7 +10,6 @@ find_package (PythonLibs)
 
 if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
   include_directories (${PYTHON_INCLUDE_DIRS})
-  link_directories (${CMAKE_CURRENT_BINARY_DIR}/../src)
 
   if (CMAKE_VERSION VERSION_LESS 3.8)
     swig_add_module (nfc python ../nfc.i)
@@ -30,19 +29,16 @@ if (PYTHONLIBS_FOUND AND PYTHONINTERP_FOUND)
                     OUTPUT_VARIABLE _ABS_PYTHON_MODULE_PATH
                     OUTPUT_STRIP_TRAILING_WHITESPACE )
 
-  get_filename_component ( _ABS_PYTHON_MODULE_PATH ${_ABS_PYTHON_MODULE_PATH} ABSOLUTE )
-  file ( RELATIVE_PATH _REL_PYTHON_MODULE_PATH ${CMAKE_INSTALL_PREFIX} ${_ABS_PYTHON_MODULE_PATH} )
+  get_filename_component (_ABS_PYTHON_MODULE_PATH ${_ABS_PYTHON_MODULE_PATH} ABSOLUTE)
+  file (RELATIVE_PATH _REL_PYTHON_MODULE_PATH ${CMAKE_INSTALL_PREFIX} ${_ABS_PYTHON_MODULE_PATH})
 
-  set ( PYTHON_MODULE_PATH
-        ${_REL_PYTHON_MODULE_PATH}
-      )
+  set (PYTHON_MODULE_PATH ${_REL_PYTHON_MODULE_PATH})
 
   install (FILES ${CMAKE_CURRENT_BINARY_DIR}/nfc.py DESTINATION ${PYTHON_MODULE_PATH})
   install (TARGETS ${SWIG_MODULE_nfc_REAL_NAME} LIBRARY DESTINATION ${PYTHON_MODULE_PATH})
 
   set (NFC_PYTHON_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/${PYTHON_MODULE_PATH} )
 
-  
   add_subdirectory (examples)
 endif ()
 
