--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ project (nfc-bindings C)
 if (POLICY CMP0078)
   cmake_policy (SET CMP0078 NEW)
 endif ()
+if (POLICY CMP0086)
+  cmake_policy (SET CMP0086 NEW)
+endif ()
 
 option (INSTALL_EXAMPLES "install examples" ON)
 list (APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
