--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required (VERSION 2.8)
 
+set (CMAKE_BUILD_TYPE Release CACHE STRING "build type")
+
 project (nfc-bindings C)
 
 if (POLICY CMP0078)
