--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,12 @@ jobs:
   linux:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - run: |
-      apt-get install libusb-dev libpcsclite-dev python3-dev swig cmake
-      curl -L https://github.com/nfc-tools/libnfc/releases/download/libnfc-1.8.0/libnfc-1.8.0.tar.bz2 | tar xj
-      cd libnfc-1.8.0 && cmake . && make -j4 && sudo make install && cd -
-      cmake -DCMAKE_INSTALL_PREFIX=~/.local . && make install
+      - uses: actions/checkout@v2
+      - name: Build
+        run: |
+          sudo apt-get install libusb-dev libpcsclite-dev python3-dev swig cmake
+          curl -L https://github.com/nfc-tools/libnfc/releases/download/libnfc-1.8.0/libnfc-1.8.0.tar.bz2 | tar xj
+          cd libnfc-1.8.0 && cmake . && make -j4 && sudo make install && cd -
+          cmake -DCMAKE_INSTALL_PREFIX=~/.local . && make install
       
       
