--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -1,24 +1,15 @@
 
-include_directories (${CMAKE_CURRENT_SOURCE_DIR})
-
-if (CMAKE_VERSION VERSION_LESS 3.24)
+if (CMAKE_VERSION VERSION_LESS 3.18)
   find_package (Python 3.6 COMPONENTS Interpreter Development)
 else ()
   find_package (Python 3.6 COMPONENTS Interpreter Development.Module)
 endif ()
 
 if (Python_FOUND)
-  include_directories (${Python_INCLUDE_DIRS})
-
   swig_add_library (nfc LANGUAGE python SOURCES ../nfc.i python_wrapping.c)
   target_link_libraries (${SWIG_MODULE_nfc_REAL_NAME} ${LIBNFC_LIBRARIES})
-
-  if (TARGET Python::Module)
-    target_link_libraries (${SWIG_MODULE_nfc_REAL_NAME} Python::Module)
-  else ()
-    include (TargetLinkLibrariesWithDynamicLookup)
-    target_link_libraries_with_dynamic_lookup (${SWIG_MODULE_nfc_REAL_NAME} ${Python_LIBRARIES})
-  endif ()
+  target_link_libraries (${SWIG_MODULE_nfc_REAL_NAME} Python::Module)
+  target_include_directories (${SWIG_MODULE_nfc_REAL_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 
   if (WIN32)
     set (PYTHON_SITE_PACKAGES Lib/site-packages CACHE PATH "sp dir")
@@ -30,7 +21,6 @@ if (Python_FOUND)
   install (TARGETS ${SWIG_MODULE_nfc_REAL_NAME} LIBRARY DESTINATION ${PYTHON_SITE_PACKAGES})
 
   set (NFC_PYTHON_MODULE_PATH ${CMAKE_INSTALL_PREFIX}/${PYTHON_MODULE_PATH})
-
 endif ()
 
 
