--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,10 +8,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build
         run: |
-          sudo apt-get install libusb-dev libpcsclite-dev python3-dev swig cmake
-          curl -L https://github.com/nfc-tools/libnfc/releases/download/libnfc-1.8.0/libnfc-1.8.0.tar.bz2 | tar xj
-          cd libnfc-1.8.0 && cmake -DCMAKE_INSTALL_PREFIX=/usr -DBUILD_EXAMPLES=OFF -DBUILD_UTILS=OFF . && make -j4 && sudo make install && cd -
-          cmake -DCMAKE_INSTALL_PREFIX=~/.local . && make install
+          sudo apt-get install libnfc-dev python3-dev swig cmake
+          cmake -DCMAKE_INSTALL_PREFIX=~/.local . && make install -j4
           python -c "import nfc; print(nfc.__version__)"
       
       
